# KeypointNet

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md
annotations/: chair.json
benchmark_scripts/: README.md  dataset.py  env.yml  metrics.py  setup_env.sh  test.py  train.py  utils.py
benchmark_scripts/config/: config.yaml
benchmark_scripts/config/network/: dgcnn.yaml  graphcnn.yaml  pointconv.yaml  pointnet.yaml  pointnet2.yaml  rscnn.yaml  rsnet.yaml  spidercnn.yaml
benchmark_scripts/models/: dgcnn.py  graphcnn.py  pointconv.py  pointnet.py  pointnet2.py  rscnn.py  rsnet.py  spidercnn.py
benchmark_scripts/models/pointnet2_utils/: utils.py
benchmark_scripts/models/rscnn_utils/: pointnet2_modules.py  pointnet2_utils.py  pytorch_utils.py
examples/: visualize.py
splits/: test.txt  train.txt  val.txt
tasks/: README.md
tasks/correspondence/: main.py
tasks/correspondence/cfg/: demo.yml
tasks/correspondence/config/: config.yaml
tasks/correspondence/dataset/: data_loader.py
tasks/correspondence/model/: benchmark.py  dgcnn.py  graphcnn.py  linalg_utils.py  options.py  pointconv.py  rsnet.py  spidercnn.py
tasks/correspondence/utils/: evaluator.py  losses.py  tools.py  trainer.py
tasks/saliency/: eval.py  eval_iou_accuracy.py  evaluate_iou.py  evaluate_keypoints.py  evaluate_map.py  load_data.py  test_kp_bin.py  train_kp_bin.py  utils.py
tasks/saliency/config/: test.yaml  train.yaml
tasks/saliency/models/harris3d/: CMakeLists.txt  build.sh  main_.cpp
tasks/saliency/models/iss3d/: CMakeLists.txt  build.sh  main.cpp
(+74 files in other folders)
